--- a/index.html
+++ b/index.html
@@ -3372,12 +3372,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 <div class="wsite-spacer" style="height:36px;"></div>
 
-<div class="paragraph">For first time visitors: You can find information under the topic headings below the main title.&#160;<br><br>&#8203;This site is dedicated to<strong><font color="#da73d2" size="4"> Florence Ridley</font></strong>, the light of my life and the coolest of cool. I wish I could longshore drift in your direction.&#160;<br>&#8203;<br>Disclaimer: this site was not made by Florence Ridley. She is cooler than I am and has a life instead of enough time to make this.&#160;<br><strong><em><font size="3"><font color="#8273da">-</font><font color="#508d24">&#160;Mrs B.'s Chickens&#160;</font></font></em></strong><br><br>This is a Geography revision website for the Edexcel A-Level from 2016 (so the new syllabus), and will contain my class notes, own research and detail from revision guides and textbooks. It's a way of having all my information in one place.&#160;<br><br>The topics it will cover are: tectonics, coasts, globalisation, regeneration, the water cycle, the carbon cycle, superpowers and health, human rights and military intervention.&#160;<br><br>Top tips:<ul><li>remember to follow the command word (assess if it says assess, etc)</li><li>include extra detail for extra marks in longer questions</li><li>make sure to include geographical terminology!&#160;</li></ul><br>I hope this is useful, and good luck for your exams!&#160;&#160;</div>
-
-<h2 class="wsite-content-title"><br>Timeline<br></h2>
-
-<div class="paragraph">1970 - KOF Index first published.<br>2008 - AT Kearney Index first published.&#160;<br>2010 - Port-au-Prince earthquake in Haiti<br>2016 - Netherlands and Ireland top the KOF Index</div>
-			</div>
+<div class="paragraph">For first time visitors: You can find information under the topic headings below the main title.&#160;<br><br>&#8203; This is just a mirror of a blocked revision site. Mirrored by Bizo</div>
 		</div>
       </div>
 
