--- a/index.html
+++ b/index.html
@@ -3222,7 +3222,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 <div class="wsite-spacer" style="height:36px;"></div>
 
-<div class="paragraph">For first time visitors: You can find information under the topic headings below the main title.&#160;<br><br>&#8203; This is just a mirror of a blocked revision site. Mirrored by Bizo. Original website Here: <a href = "https://geographyrevisionalevel.weebly.com/">https://geographyrevisionalevel.weebly.com/</a></div>
+<div class="paragraph">For first time visitors: You can find information under the topic headings below the main title.&#160;<br><br>&#8203; This is just a mirror of a blocked revision site. Mirrored by Bizo. The original owner hasn't actually made all the pages, so if some pages are returned blank that is why. Original website Here: <a href = "https://geographyrevisionalevel.weebly.com/">https://geographyrevisionalevel.weebly.com/</a></div>
     </div><!-- end content-wrap -->
 
     <div class="footer-wrap">
